# naive_evm

./: Cargo.toml  Makefile.toml
examples/: ch01.rs  ch02.rs  ch03.rs
solidity/: ch01.sol
solidity/outputDirectory/: ch01.evm
src/: main.rs  op_code.rs
