[package]
name = "naive_evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
colored = "2.1.0"
hex = "0.4.3"
once_cell = "1.19.0"
primitive-types = "0.12.2"
sha3 = "0.10.8"
thiserror = "1.0.56"

[lib]
path = "src/lib.rs"
